removed gc log and added Europe/Rome timezone